# RustInAttack

ProcessInjection/ShellcodeInjection/: CreateRemoteThread.rs
ProcessInjection/ShellcodeInjection/CreateRemoteThread/: README.md
ProcessInjection/ShellcodeInjection/IndirectSyscalls/: Cargo.toml  README.md
ProcessInjection/ShellcodeInjection/IndirectSyscalls/src/: SyscallsProcessInjectionPOC.rs
